# sonar-qube-gh-action

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .pytest.ini  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  pyrightconfig.json  ruff.toml  sonar-project.properties
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: main-workflow.yaml  pr-workflow.yaml
src/sonar_qube_gh_action/: calculator.py  main.py
tests/sonar_qube_gh_action/: test_calculator.py
