[project]
name = "sonar-qube-gh-action"
version = "0.1.0"
description = "Demo of SonarQube GitHub Action"
authors = [{ name = "Aqib Niaz Bhat" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "structlog>=25.2.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=5.0.0",
    "pyright>=1.1.381",
    "ruff>=0.11.2",
    "pytest>=8.3.5",
    "python-semantic-release>=9.21.0",
    "pre-commit>=4.2.0",
]

[tool.semantic_release]
version_variables = ["pyproject.toml:version"]
build_command = "curl -LsSf https://astral.sh/uv/install.sh | sh && source $HOME/.local/bin/env && uv build"

[tool.semantic_release.remote.token]
env = "SEMVER_GH_TOKEN"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.distutils.bdist_wheel]
universal = true


[project.urls]
Repository = "https://github.com/aqib-oss/sonar-qube-gh-action"
Documentation = "https://github.com/aqib-oss/sonar-qube-gh-action/blob/main/README.md"
Changelog = "https://github.com/aqib-oss/sonar-qube-gh-action/blob/main/CHANGELOG.md"
Releases = "https://github.com/aqib-oss/sonar-qube-gh-action/releases"
